--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
 		<m3.site.version>3.0</m3.site.version>
 		<changelog.version>2.2</changelog.version>
 		<coverage.reports.dir>${project.build.directory}/target/coverage-reports</coverage.reports.dir>
+		<maven.compiler.target>1.6</maven.compiler.target>
     </properties>
 
 	<licenses>
@@ -90,8 +91,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.0</version>
                 <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
+                    <source>${maven.compiler.target}</source>
+                    <target>${maven.compiler.target}</target>
                 </configuration>
             </plugin>
 			<plugin>
