--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
 	<groupId>com.github.davidmoten</groupId>
 	<artifactId>geo</artifactId>
-	<version>0.6.7</version>
+	<version>0.6.7-SNAPSHOT</version>
 
 	<name>${project.artifactId}</name>
 	<description>Geohash encoding and decoding utilities including bounding box coverage.</description>
