--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,11 @@
 			<version>2.4</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+		    <groupId>com.github.davidmoten</groupId>
+		    <artifactId>grumpy-core</artifactId>
+		    <version>0.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
