--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>com.github.davidmoten</groupId>
 	<artifactId>geo</artifactId>
-	<version>0.6.10</version>
+	<version>0.6.11-SNAPSHOT</version>
 
 	<name>${project.artifactId}</name>
 	<description>Geohash encoding and decoding utilities including bounding box coverage.</description>
@@ -70,7 +70,7 @@
 		<connection>scm:git:git@github.com:davidmoten/geo.git</connection>
 		<developerConnection>scm:git:git@github.com:davidmoten/geo.git</developerConnection>
 		<url>scm:git:git@github.com:davidmoten/geo.git</url>
-	  <tag>0.6.10</tag>
+	  <tag>HEAD</tag>
   </scm>
 
 	<dependencies>
