--- a/geo-mem/pom.xml
+++ b/geo-mem/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.github.davidmoten</groupId>
 		<artifactId>geo-parent</artifactId>
-		<version>0.7.6</version>
+		<version>0.7.7-SNAPSHOT</version>
 	</parent>
 	<artifactId>geo-mem</artifactId>
 	<name>${project.artifactId}</name>
