--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
         <version>0.1</version>
     </parent>
     <artifactId>geo-parent</artifactId>
-    <version>0.8.0</version>
+    <version>0.8.1-SNAPSHOT</version>
     <packaging>pom</packaging>
     <properties>
         <flatbuffers.version>1.3.0</flatbuffers.version>
@@ -72,7 +72,7 @@
         <connection>${scm.url}</connection>
         <developerConnection>${scm.url}</developerConnection>
         <url>${scm.url}</url>
-        <tag>0.8.0</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <modules>
