--- a/geo/pom.xml
+++ b/geo/pom.xml
@@ -35,7 +35,7 @@
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
-            <version>1.3.176</version>
+            <version>${h2.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
