--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
 
         <jmh.version>1.33</jmh.version>
         <guava.version>30.1.1-jre</guava.version>
+        <h2.version>1.4.200</h2.version>
         
         <checkstyle.version>3.1.2</checkstyle.version>
         <checkstyle.xml>src/main/checkstyle/checkstyle.xml</checkstyle.xml>
